# arre-mind-reader

./: Cargo.toml  README.md  Trunk.toml  index.html  task.md  wasm_initializer.mjs
.cargo/: config.toml
documentation/: misc.md  notes_for_ai_agents.md  wasm_build.md
src/: fonts.rs  input.rs  main.rs  orp.rs  persistence.rs  playback.rs  reader.rs  settings.rs  state.rs  tabs.rs  text.rs  text_parser.rs  timing.rs  ui.rs
src/ui/: controls.rs  dialogs.rs  homepage.rs  mod.rs  tab_bar.rs
