[package]
name = "arre_mind_reader"
version = "0.1.0"
edition = "2024"

[features]
default = ["native"]
native = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18.*", default-features = false, features = ["2d"] }
bevy_egui = "0.39.*"
serde = { version = "1.0.*", features = ["derive"] }
ron = "0.12.*"
rfd = "0.17.*"
rbook = "0.6.*"
quick-xml = "0.39.*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3"
js-sys = "0.3.*"
web-sys = "0.3.*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
