[package]
name = "arre_mind_reader"
version = "1.0.0"
edition = "2024"

[features]
default = ["native"]
native = ["bevy/dynamic_linking", "bevy/default_platform"]

[dependencies]
bevy = { version = "0.18.*", default-features = false, features = [
    #"2d_bevy_render",  
    "bevy_render",         # The base renderer
    "bevy_core_pipeline",  # Camera and basic render passes
    "bevy_sprite_render",  # Handles Sprite and Text2d rendering
    "bevy_text",           # Required for Text2d specifically
    
    "bevy_ui",          
    "bevy_asset",
    "bevy_log",
    "bevy_state",       
    "bevy_winit",       
    "webgl2",           # Required for Wasm rendering
] }
bevy_egui = "0.39.*"
serde = { version = "1.0.*", features = ["derive"] }
ron = "0.12.*"              # Rust Object Notation — tab state persistence format
rfd = "0.17.*"              # File dialogs (native + WASM)
rbook = "0.6.*"             # EPUB parsing (WASM-compatible)
quick-xml = "0.39.*"        # XHTML text extraction for EPUB content

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0.*"              # Platform config directory

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-storage = "0.3"        # localStorage wrapper
js-sys = "0.3.*"
web-sys = "0.3.*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1

# called from index.html
[profile.wasm-release]
inherits = "release"
opt-level = "z"
panic = "abort"
lto = "fat" # "fat" LTO is even more aggressive than "true"
strip = "symbols"